tests/knowledge/testing-accounts-data/account-data-ec2-classic-platform/test/eu-west-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-1a579a75",
                    "NetworkAclId": "acl-992b18f1",
                    "SubnetId": "subnet-1b77c257"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-1b579a74",
                    "NetworkAclId": "acl-992b18f1",
                    "SubnetId": "subnet-71f4930b"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-1c579a73",
                    "NetworkAclId": "acl-992b18f1",
                    "SubnetId": "subnet-2f0e5446"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-992b18f1",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-eccf9e84"
        }
    ]
}
